--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -76,6 +76,16 @@
 
 {% endblock %}
 
+{% block navbar_right_items %}
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Monitor <span class="caret"></span></a>
+    <ul class="dropdown-menu" role="menu">
+        <li><a href={% url 'expert_report_status' %}>Reports</a></li>
+        <li><a href={% url 'expert_status' %}>People</a></li>
+    </ul>
+</li>
+{% endblock %}
+
 {% block grab_reports_button %}
 {% endblock %}
 
