--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -401,8 +401,12 @@ function make_user_response_row(responses) {
 
 function make_user_response_row_sites(responses, site_cat) {
     if (responses != null) {
-        return '<tr><td><table class="response-table"><tr class="response-table"><td class="response-table question border-right">{% trans 'user_response_row_sites_q1' %}</td><td class="response-table question border-right">{% trans 'user_response_row_sites_q2' %}</td><td class="response-table question">{% trans 'user_response_row_sites_q3' %}</td><tr><td class="response-table response border-right">' + rc2s(responses.q1_response) + '</td><td class="response-table response border-right">' + rc2s(responses.q2_response) + '</td><td class="response-table response">' + sc2s(site_cat) + '</td></tr></table></td></tr>';
-    } else {
+        if('q1_response' in responses){
+        return '<tr><td><table class="response-table"><tr class="response-table"><td class="response-table question border-right">{% trans 'user_response_row_sites_q1' %}</td><td class="response-table question border-right">{% trans 'user_response_row_sites_q2' %}</td><tr><td class="response-table response border-right">' + rc2s(responses.q1_response) + '</td><td class="response-table response border-right">' + rc2s(responses.q2_response) + '</td></tr></table></td></tr>';
+    } else if('q1_response_new' in responses){
+        return '<tr><td><table class="response-table"><tr class="response-table"><td class="response-table question border-right">{% trans 'user_response_row_sites_q1_new' %}</td><td class="response-table question border-right">{% trans 'user_response_row_sites_q2_new' %}</td><td class="response-table question">{% trans 'user_response_row_sites_q3_new' %}</td><tr><td class="response-table response border-right">' + rc2s(responses.q1_response_new) + '</td><td class="response-table response border-right">' + rc2s(responses.q2_response_new) + '</td><td class="response-table response">' + rc2s(responses.q2_response_new) + '</td></tr></table></td></tr>';
+        }
+        else {
         return '';
     }
 }
