--- a/tigamap/static/tigamap/tigamap_legend.css
+++ b/tigamap/static/tigamap/tigamap_legend.css
@@ -59,18 +59,40 @@ body {
     color: white;
 }
 
+.black a {
+    color: white;
+    text-decoration: none;
+}
+
 .grey {
     background-color: grey;
     color: white;
+}
+
+.grey a {
+    color: white;
+    text-decoration: none;
 }
 
 .red {
     background-color: red;
 }
 
+.red a {
+    color: black;
+    text-decoration: none;
+}
+
+
 .orange {
     background-color: orange;
 }
+
+.orange a {
+    color: black;
+    text-decoration: none;
+}
+
 
 .note-div {
     font-size: .9em;
