--- a/tigamap/static/tigamap/tigamap_legend.css
+++ b/tigamap/static/tigamap/tigamap_legend.css
@@ -75,6 +75,7 @@ body {
 }
 
 .red {
+    color: black;
     background-color: red;
 }
 
@@ -85,6 +86,7 @@ body {
 
 
 .orange {
+    color: black;
     background-color: orange;
 }
 
