unclassified icon and translated text added

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -1008,6 +1008,16 @@ function map_init_basic(map, options) {
                     {% trans 'expert_cat_other' %}
                 </td>
             </tr>
+
+            <tr>
+                <td>
+                    <img src="{% static 'tigamap/yellow_yellow_dot.png' %}">
+                </td>
+                <td>
+                    {% trans 'expert_cat_unclassified' %}
+                </td>
+            </tr>
+
         </table>
     </div>
 
@@ -1129,6 +1139,16 @@ function map_init_basic(map, options) {
                     {% trans 'expert_cat_other_site' %}
                 </td>
             </tr>
+
+            <tr>
+                <td>
+                    <img src="{% static 'tigamap/blue_blue_dot.png' %}">
+                </td>
+                <td>
+                    {% trans 'expert_cat_unclassified' %}
+                </td>
+            </tr>
+
         </table>
     </div>
 
